feat: update device api
